# BIGExplorer

./: CMakeLists.txt  LICENSE  README.md
include/: BIGFiles.h  mainwindow.h  tinyformat.h
src/: BIGFiles.cpp  Main.cpp  MainWindow.cpp  explorer.ui  explorer.ui.autosave
